--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
-\title{Bachelor Abstract
-(A Seismic Shift in Scalable Acquisition Demands New Processing: Fiber-Optic Seismic Signal Retrieval in Urban Areas with Unsupervised Learning for Coherent Noise Removal)}
+\title{
+Fiber Optic Seismic Aquisition Using Unsupervised Learning}
 \author{Samuel Gende }
 \date{April 2024}
 
@@ -8,7 +8,8 @@
 
 \maketitle
 
-\paragraph{Seismic waves are vibrations that travel through the earth. Using different sensors geologists can measure surface waves to monitor earthquake motion, landslide risk, sinkholes, and permafrost. Usually these sensors are costly and thus can't be deployed very densely. Martin Et al. tested fiber-optic distributed acoustic sensing(DAS) arrays, to measure surface waves with fiber optic cables. This approach is cheaper and has long been used in the oil and gas industry, with cables that are fastened to the ground. Martin Et al. used unfastened cables which produce noisier measurements but are easier to deploy. After collecting data from the DAS array, they extracted features by performing continuous wavelet transforms(CWT). Once the features where extracted they could cluster the data and, mute the noisy problem cluster. This improved the virtual-source response estimate convergence rate, which allows geologist to retrieve data that mimics a controlled-source experiment. }
+\paragraph{Seismic waves are vibrations that travel through the earth. Using different sensors geologists can measure surface waves to monitor earthquake motion, landslide risk, sinkholes, and permafrost. Usually these sensors are costly and thus can't be deployed very densely. Martin Et al. tested fiber-optic distributed acoustic sensing(DAS) arrays, to measure surface waves with fiber optic cables. This approach is cheaper, and has long been used in the oil and gas industry; with cables that are fastened to the ground. Martin Et al. used unfastened cables which produce noisier measurements but are easier to deploy. After collecting data from the DAS array, they extracted features by performing continuous wavelet transforms(CWT). Once the features where extracted they could cluster the data and, mute the noisy problem cluster. This improved the virtual-source response estimate convergence rate, which allows geologist to retrieve data that mimics a controlled-source experiment. }
 
-\paragraph{There are multiple ways in which the paper can be extended. The first step in the pipeline would be to investigate which wavelet to use in the CWT. The authors mentioned they used a Morlet wavelet since it is often used in signal processing. Evaluating the use of other wavelets could be an interesting extension. The simplest way to further evaluate DAS arrays is to use different data. In the paper data was collected underneath an urban area from a figure eight shaped DAS array. Using other shapes from less noisy areas could yield different results. Testing different filtering techniques in the feature space is another way that the paper could be extended. Martin Et al. used k-means to cluster the data then identified a noisy cluster. At this step we could use a different clustering technique or a completely different filtering technique to remove noise }
+\paragraph{The original papers unsupervised machine learning technique has four main parts that need to be reimplemented, continuous wavelet transforms, clustering, filtering, and virtual-source response extraction. The first step is performing continuous wavelet transforms on the original signal collected by the DAS array to extract features for clustering. Half of the 60 CWT scale factors where computed on the time axis and the other half on the space axis. After extracting the features the authors then clustered the data using k-means with minibatch optimization. This resulted in 4 clusters one of which the authors identified as high frequency noise from automobiles. To filter out this noise on unseen data the authors performed CWTs on the data. Then muted the high frequency scales that seperated the noisy cluster from other clusters, and finally performed inverse CWTs to return to the original signal. The last step in the proccess was to extract the virtual response estimate, using 1-bit cross correlation. The convergene of the virtual source estimate was used to indicate wether the filtering was useful. If the virtual source estimate converges then the filtering resulted in a more repeatable signal. After these steps have been implemented and tested there is room to test different techniques of clustering, CWTs wavelets, and virtual source retrival. }
+
 \end{document}
