--- a/Paper/refs.bib
+++ b/Paper/refs.bib
@@ -9,3 +9,11 @@
   keywords = {Optical fiber cables;Optical fiber sensors;Optical fiber theory;Monitoring;Telecommunications;Data mining;Seismic measurements},
   doi      = {10.1109/MSP.2017.2783381}
 }
+
+
+@book{Addison:2002,
+  author    = {Paul S Addison},
+  title     = {The Illustrated Wavelet Transform Handbook Introductory Theory and Applications in Scienc Engineering, Medicine and Finance},
+  year      = {2002},
+  publisher = {CRC Press}
+}
