Plot Cluster labels onto DAS

--- a/Code/newZeland.ipynb
+++ b/Code/newZeland.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -27,15 +27,16 @@
      "text": [
       "2023-02-26 08:56:00.122000\n",
       "True\n",
-      "(3000, 7407)\n"
+      "(3000, 3704)\n",
+      "das data has origional length 7488\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "file_path = './2023p152354/south30_50Hz_UTC_20230226_085600.122.h5'\n",
+    "file_path = './Data/2023p152354/south30_50Hz_UTC_20230226_085600.122.h5'\n",
     "#earthquake and car sample ? \n",
-    "file_path2 = './2023p152354/south30_50Hz_UTC_20230226_085500.122.h5'\n",
+    "file_path2 = './Data/2023p152354/south30_50Hz_UTC_20230226_085500.122.h5'\n",
     "\n",
     "\n",
     "\n",
