add snr notebook

--- a/Code/TestNotebooks/one_bit_crossover.ipynb
+++ b/Code/TestNotebooks/one_bit_crossover.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -160,10 +160,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x1241ef200>"
+       "<matplotlib.colorbar.Colorbar at 0x1227fdeb0>"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -183,6 +183,113 @@
     "plt.imshow(cross_cor_DAS , cmap=\"seismic\")\n",
     "plt.title(f'One bit cross correlations with source channel {source_channel}')\n",
     "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try to implement a Semblence SNR "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(286, 15000)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DAS_Stanford.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def zero_time_lag_cross_cor(channel_a, channel_b):\n",
+    "    return np.sum(channel_a * channel_b)\n",
+    "\n",
+    "def semblance(DAS_sample):\n",
+    "    sum = 0\n",
+    "    divisor = 0\n",
+    "    for i in range(DAS_sample.shape[0]):\n",
+    "        divisor += zero_time_lag_cross_cor(DAS_sample[i], DAS_sample[i])\n",
+    "        for j in range(DAS_sample.shape[0]):\n",
+    "            sum += zero_time_lag_cross_cor(DAS_sample[i], DAS_sample[j])\n",
+    "    DAS_sample.shape[0] * divisor\n",
+    "    return sum / divisor\n",
+    "\n",
+    "def SNR_sem(DAS_sample):\n",
+    "    s = semblance(DAS_sample)\n",
+    "\n",
+    "    print(f'semblance is {s}')\n",
+    "\n",
+    "    snr = s / (1 -s)\n",
+    "    return snr\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "semblance is 29.369236345045834\n",
+      "singal to noise ratio of raw DAS is -1.0352494507725667\n",
+      "semblance is 2.484887272357948\n",
+      "singal to noise ratio of processesd DAS is  -1.6734517957124353\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test semblance with Stanford das \n",
+    "DAS_Stanford_raw = np.load(\"../Data/september10data/20160910_00:00:54.npy\")\n",
+    "print(f'singal to noise ratio of raw DAS is {SNR_sem(DAS_Stanford_raw)}')\n",
+    "proccessed_DAS = bpfilter(DAS_Stanford_raw, .02, 0.2, 24)\n",
+    "print(f'singal to noise ratio of processesd DAS is  {SNR_sem(proccessed_DAS)}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3704, 478)\n",
+      "semblance is 42.2001914920039\n",
+      "SNR of normal inverse is -1.0242717318484813\n",
+      "semblance is 49.25761273040788\n",
+      "SNR of muted inverse is -1.020722119131473\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test semblance with inveres \n",
+    "inverse_313 = np.load(\"../Data/inference/cwt_2023p313442.npy_invers.npy\")\n",
+    "muted_313 = np.load(\"../Data/inference/cwt_2023p313442.npy_muted.npy\")\n",
+    "print(inverse_313.shape)\n",
+    "print(f'SNR of normal inverse is {SNR_sem(inverse_313)}')\n",
+    "print(f'SNR of muted inverse is {SNR_sem(muted_313)}')"
    ]
   },
   {
